# pytest-freethreaded

./: LICENSE  README.md  pyproject.toml  pytest_freethreaded.py  test_pytest_freethreaded.py  test_pytest_racy_fixture.py
src/pytest_freethreaded/: plugin.py
