[project]
name = "pytest-freethreaded"
description = "pytest plugin for running parallel tests"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "PyCon JP 2024 Team"}]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dynamic = [ "version" ]
dependencies = [ "pytest" ]

[project.urls]
Home = "https://github.com/tonybaloney/pytest-freethreaded"

[project.entry-points.pytest11]
freethreaded = "pytest_freethreaded.plugin"

[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"
